<resources>
    <string name="app_name">HungerHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account ? Sign Up</string>
    <string name="tokenG">698206728933-5vklao7k9hsmej4khf6hf661890u8e1k.apps.googleusercontent.com</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="instructions">Instructions</string>
    <string name="add_to_your_plan">Add to your plan</string>
    <string name="the_meal_name">The Meal name</string>
    <string name="area">Area</string>
    <string name="remove">Remove</string>
    <string name="ingredients">Ingredients</string>
    <string name="your_favourites">Your Favourites</string>
</resources>