<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Authentication.LoginFragment"
    android:background="@color/offWhite"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="420dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"

        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="10dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:text="@string/do_not_have_an_account_sign_up"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:id="@+id/goToSignUp"
        android:layout_marginBottom="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:id="@+id/loginBtn"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintStart_toStartOf="@id/pass"
        android:layout_marginTop="32dp"
        android:textSize="25sp"
        android:layout_marginHorizontal="64dp"
        android:padding="4dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToSignUp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="50dp"
        android:layout_marginLeft="180dp"
        android:layout_marginBottom="25dp"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"

             android:id="@+id/google"
            android:src="@drawable/googlee"
            android:backgroundTint="@color/offWhite"

            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>