<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Authentication.register.view.RegisterFragment"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/profile"
        android:drawablePadding="12dp"

        android:hint="@string/name"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name Required"
        android:id="@+id/nameError"
        android:visibility="invisible"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:textColor="#FF0303"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"

        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invalid Email Address!"
        android:id="@+id/emailError"
        android:visibility="invisible"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:textColor="#FF0303"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="10dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Passwords do not match !"
        android:id="@+id/matchPassError1"
        android:visibility="invisible"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:textColor="#FF0303"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintStart_toStartOf="@id/pass"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchPassError2"
        android:visibility="invisible"
        android:text="Passwords do not match !"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:textColor="#FF0303"
        app:layout_constraintTop_toBottomOf="@id/conPass"
        app:layout_constraintStart_toStartOf="@id/conPass"
/>    <EditText
        android:id="@+id/conPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="10dp"

        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginStart="64dp"

        android:text="Already Have an Account ?  Sign In"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:id="@+id/goToSignIn"
        android:layout_marginBottom="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:id="@+id/registerBtn"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/conPass"
        app:layout_constraintStart_toStartOf="@id/conPass"
      android:layout_marginTop="32dp"
        android:textSize="25sp"
        android:layout_marginHorizontal="64dp"
        android:padding="4dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBtn"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="50dp"
        android:layout_marginLeft="180dp"
        android:layout_marginBottom="25dp"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/google"

            android:src="@drawable/googlee"
            android:backgroundTint="@color/white"

            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>