<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeTabs.selectedItem.view.DetailedMealFragment"

    >


  <WebView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      android:id="@+id/video"/>

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/custom_text"
      android:paddingHorizontal="8dp"

      android:textSize="18sp"
      android:text="zzzzzzzzzzz"
      android:textStyle="bold"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/video" />
  <TextView
      android:id="@+id/area"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"

      android:paddingHorizontal="8dp"

      android:textSize="18sp"
      android:text="zzzzzzzzzzz"
      android:textStyle="bold"
      android:textColor="@color/black"
     app:layout_constraintEnd_toStartOf="@+id/world"
      app:layout_constraintTop_toTopOf="@id/world" />
  <TextView
      android:id="@+id/category"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:textSize="14sp"
      android:layout_marginTop="8dp"
      android:text="zzzzzzzzzzz"
      android:textStyle="bold"
      android:textColor="#882A2424"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title" />
  <ImageView
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_marginStart="8dp"
      app:layout_constraintStart_toEndOf="@id/category"
      app:layout_constraintTop_toTopOf="@id/category"
      android:src="@drawable/category"
      />

  <ImageView
      android:layout_width="15dp"
      android:layout_height="27dp"

      android:id="@+id/world"
      android:src="@drawable/world"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/category"
      app:layout_constraintTop_toBottomOf="@id/video" />

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:foregroundGravity="bottom"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:backgroundTint="@color/primary"
      android:id="@+id/addToFav"
      android:text="@string/add_to_favourite"
      android:textColor="@color/white"
      android:layout_marginStart="32dp"
      android:layout_marginBottom="10dp"

    />
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:foregroundGravity="bottom"
      android:id="@+id/addToPlan"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:backgroundTint="@color/primary"
      android:text="@string/add_to_your_plan"
      android:textColor="@color/white"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="8dp"
      />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
      android:fillViewport="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintBottom_toTopOf="@id/addToPlan"

        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientsTitle"
            android:text="Ingredients"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/primary"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rv"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instructionsTitle"
            android:text="@string/instructions"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textColor="@color/primary"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:cardElevation="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="15dp"
            app:contentPadding="16dp"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#2A2626"
              android:id="@+id/instructions"
              android:textSize="16sp"
              />
        </androidx.cardview.widget.CardView>
      </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>